# jx3_tools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  jx3_tools.sln  jx3_tools.vcxproj  jx3_tools.vcxproj.filters
include/: APP_j3pzCalc.h  MainAPP.h
res/: jx3_tools.qrc  jx3_tools.rc  resource.h
src/: APP_j3pzCalc.cpp  MainAPP.cpp  main.cpp
